--- a/asheetofstyles.css
+++ b/asheetofstyles.css
@@ -1,6 +1,54 @@
 /* Ubuntu */
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 /*Main Title*/
+body{font-family:'Ubuntu';}
 h1 {
 	font-family:'Ubuntu', sans-serif;
 }
+
+#toolbar {
+	margin-right:-8px;
+	margin-top:-8px;
+	background-image:url('bg2.png');
+	background-size: cover;
+	height:40px;
+}
+
+.dropbtn {
+  background-color: #ccc;
+  color: #000;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: -8px;
+  padding-top: 10px;
+  font-size: 16px;
+  border: none;
+  margin-left:-10px;
+  margin-top:-10px;
+  height:50px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 150px;
+  z-index: 1;
+  margin-left: -10px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
