--- a/asheetofstyles.css
+++ b/asheetofstyles.css
@@ -11,7 +11,7 @@ h1 {
 	margin-top:-8px;
 	background-image:url('bg2.png');
 	background-size: cover;
-	height:40px;
+	height:41px;
 }
 
 .dropbtn {
@@ -25,7 +25,7 @@ h1 {
   border: none;
   margin-left:-10px;
   margin-top:-10px;
-  height:50px;
+  height:51px;
 }
 
 .dropdown {
@@ -52,3 +52,20 @@ h1 {
 .dropdown-content a:hover {background-color: #ddd;}
 
 .dropdown:hover .dropdown-content {display: block;}
+
+.a {
+  margin-left:475px;
+  color: black;
+  text-align: center;
+  padding: 11px;
+  text-decoration: none;
+  font-size: 26px;
+  border-radius: 5px;
+  font-size: 25px;
+    background-color: #ddd;
+}
+
+.a:hover {
+  background-color: #bbb;
+  color: black;
+}
