--- a/asheetofstyles.css
+++ b/asheetofstyles.css
@@ -53,6 +53,7 @@ a[data-starData='a2'] {
     text-align: center;
     font-size:20px;
     text-decoration:none;
+  	display:none;
    }
 
 #toolbar {
@@ -185,9 +186,6 @@ a[data-starData='a2'] {
 .canvasmargin {
 	margin-left:12%;
 }
-  .asmall {
-  	display:none;
-  }
 @media screen and (max-width: 600px) {
   #resetButton {
     display: none;
@@ -202,7 +200,7 @@ a[data-starData='a2'] {
   .a {
   	display: none;
   }
-  .asmall {
+  a[data-starData='a2'] {
   	display:block;
   }
 }
