--- a/asheetofstyles.css
+++ b/asheetofstyles.css
@@ -53,7 +53,6 @@ a[data-starData='a2'] {
     text-align: center;
     font-size:20px;
     text-decoration:none;
-  	display:none;
    }
 
 #toolbar {
@@ -186,6 +185,9 @@ a[data-starData='a2'] {
 .canvasmargin {
 	margin-left:12%;
 }
+  .asmall {
+  	display:none;
+  }
 @media screen and (max-width: 600px) {
   #resetButton {
     display: none;
@@ -200,9 +202,14 @@ a[data-starData='a2'] {
   .a {
   	display: none;
   }
-  a[data-starData='a2'] {
+  .asmall {
   	display:block;
   }
+}
+@media print {
+	#toolbar {
+		display:none;
+	}
 }
 #body {
 	  transition: margin-left 1s;
