--- a/asheetofstyles.css
+++ b/asheetofstyles.css
@@ -12,7 +12,9 @@ body[data-starData='body-']{font-family:'Ubuntu', sans-serif;  justify-content:c
 .overlay::-webkit-scrollbar {
   display: none;
 }
-
+html {
+	scroll-behavior: smooth;
+}
 .overlay {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
@@ -61,6 +63,7 @@ a[data-starData='a2'] {
 	max-width:100%;
 	display:block;
 	top:0;
+	z-index: 999;
 	position: sticky; position: -webkit-sticky;
 }
 
@@ -245,4 +248,119 @@ a[data-starData='a2'] {
     -moz-border-radius: 0px;
     -ms-border-radius: 0px;
     border-radius: 0px;
+}
+#topButton {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #24bdff;
+  color: #000;
+  cursor: pointer; 
+  font-family: 'share';
+  font-size: 18px;
+  font-weight: bold;
+  padding: 15px;
+  border-radius:0.75em;
+  text-decoration: none;
+}
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: red;
+  font-family: sans-serif;
+  color: white;
+}
+.modal-body {padding: 2px 16px; font-family: sans-serif; color: #000000}
+
+.modal-footer {
+  padding: 10px 16px;
+  background-color: red;
+  font-family: sans-serif;
+  color: white;
+}
+.main-carousel {
+  background: #EEE;
+}
+.carousel-cell {
+  width: 100%;
+  height: 200px;
+  margin-right: 10px;
+  background: #53b85c;
+  border-radius: 5px;
+  counter-increment: carousel-cell;
+}
+#carousel-cell-1:before {
+  display: block;
+  text-align: center;
+  content: 'Not Sure What It Does';
+  background: #0000b3;
+  line-height: 200px;
+  border-radius: 5px;
+  font-size: 80px;
+  color: white;
+  counter-increment: carousel-cell;
+}
+#carousel-cell-2:before {
+  display: block;
+  text-align: center;
+  content: 'Used By About Five People';
+  background: red;
+  line-height: 200px;
+  border-radius: 5px;
+  font-size: 80px;
+  color: white;
+  counter-increment: carousel-cell;
+}
+#carousel-cell-3:before {
+  display: block;
+  text-align: center;
+  content: 'To Play MaDefenders';
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
+  counter-increment: carousel-cell;
 }
