--- a/asheetofstyles.css
+++ b/asheetofstyles.css
@@ -369,7 +369,7 @@ a[data-starData='a2'] {
 #carousel-cell-2:before {
   display: block;
   text-align: center;
-  content: 'Used By About Five People';
+  content: 'Used By About 35 People';
   background: red;
   line-height: 200px;
   border-radius: 5px;
