--- a/asheetofstyles.css
+++ b/asheetofstyles.css
@@ -67,12 +67,12 @@ a[data-starData='a2'] {
    }
 
 #toolbar {
-	margin-right:-8px;
-	margin-left: 2px;
+	margin-right:0px;
+	margin-left: 0px;
 	margin-top:-8px;
-	background-color:#ccc;
+	background-color:#4f7d5c;
 	height:42px;
-	max-width:100%;
+	width:100%;
 	display:block;
 	top:0;
 	z-index: 999;
@@ -87,14 +87,13 @@ a[data-starData='a2'] {
     }
 }
 .dropbtn {
-  background-color: #ccc;
   color: #000;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: -8px;
-  padding-top: 10px;
-  font-size: 16px;
-  border:none;
+background-color:#4f7d5c;
+  padding:14px;
+
+  font-size: 25px;
+  border:1px solid black;
+border-radius: 5px;
   margin-left:-10px;
   margin-top:-10px;
   height:52px;
@@ -129,17 +128,12 @@ a[data-starData='a2'] {
   margin-left:0%;
   color: black;
   text-align: center;
-  padding: 11px;
+  padding: 14px;
   text-decoration: none;
   font-size: 26px;
   border-radius: 5px;
   font-size: 25px;
-    background-color: #ddd;
-}
-
-.a:hover {
-  background-color: #bbb;
-  color: black;
+border:1px solid #000
 }
 
 /*overlay*/
@@ -220,12 +214,7 @@ a[data-starData='a2'] {
   }
 }
 @media screen and (max-width: 600px) {
-  .a {
-  	display: none;
-  }
-  .asmall {
-  	display:block;
-  }
+
 }
 @media print {
 	#toolbar {
@@ -288,7 +277,7 @@ a[data-starData='a2'] {
   z-index: 99;
   border: none;
   outline: none;
-  background-color: #24bdff;
+  background-color: #4f7d5c;
   color: #000;
   cursor: pointer; 
   font-family: 'share';
@@ -357,11 +346,11 @@ a[data-starData='a2'] {
   color: white;
 }
 .main-carousel {
-  background: #EEE;
+  background: #FFF;
 }
 .carousel-cell {
-  width: 100%;
-  height: 200px;
+  width: 75%;
+  height: 100px;
   margin-right: 10px;
   background: #53b85c;
   border-radius: 5px;
@@ -371,31 +360,42 @@ a[data-starData='a2'] {
   display: block;
   text-align: center;
   content: 'Not Sure What It Does';
-  background: #0000b3;
-  line-height: 200px;
+  background: #4f7d5c;
+  line-height: 100px;
   border-radius: 5px;
-  font-size: 80px;
-  color: white;
+  font-size: 50px;
+  color: #000;
   counter-increment: carousel-cell;
 }
 #carousel-cell-2:before {
   display: block;
   text-align: center;
-  content: 'Used By About 35 People';
-  background: red;
-  line-height: 200px;
+  content: 'Used By Like 2 People';
+  background: #000;
+  line-height: 100px;
   border-radius: 5px;
-  font-size: 80px;
-  color: white;
+  font-size: 50px;
+  color: #4f7d5c;
   counter-increment: carousel-cell;
 }
 #carousel-cell-3:before {
   display: block;
+  background: #4f7d5c;
   text-align: center;
   content: 'To Play MaDefenders';
-  line-height: 200px;
-  font-size: 80px;
-  color: white;
+  line-height: 100px;
+  font-size: 50px;
+  color: #000;
+  counter-increment: carousel-cell;
+}
+#carousel-cell-4:before {
+  display: block;
+  background: #000;
+  text-align: center;
+  content: 'Still Not Sure What It Does';
+  line-height: 100px;
+  font-size: 50px;
+  color: #4f7d5c;
   counter-increment: carousel-cell;
 }
 #credits {
